--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlConnection": "Server=DESKTOP-1TSFVMP\\SQLEXPRESS;Database=mvcapp;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
